@@ -1,3 +1,9 @@
+2005-01-21  Mark McLoughlin  <mark@skynet.ie>
+
+	* lib/userprofile.py: last few bits of the grand re-naming.
+	
+	* lib/storage-modules/mozillasource.py: disable for now.
+
 Thu Jan 20 21:44:31 CET 2005 Daniel Veillard <veillard@redhat.com>
 
 	* lib/dirmonitor.py: try to work around a portability problem
